--- a/force-app/main/default/layouts/Recommendation-Recommendation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Recommendation-Recommendation Layout.layout-meta.xml
@@ -68,7 +68,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1k000000NEZS</masterLabel>
+        <masterLabel>00h7A000000OLFj</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
